# n-gesture-classification

./: .gitignore  .gitmodules  aedat_visualisation.ipynb  data.dvc  main.py  norse_tutorial.py  pyproject.toml  requirements.txt
.dvc/: config
models/: BaseNeuronModel.py  LIF.ipynb  LIF.py  LIF_Ref_Period.py  LIF_Spike_Rate_Adaption.py  LIF_ref_period.ipynb  LIF_spike_rate_adaption.ipynb  LIF_static_synapses.ipynb  __init__.py  leaky_integrator.ipynb
notebooks/: 3D-CNN.ipynb  aedat_visualisation.ipynb  data_preprocessing.ipynb  n_poker_classification_cnn.ipynb  n_poker_classification_snn.ipynb  norse.ipynb  norse_tutorial.ipynb  pynn.ipynb
util/: plotting.py  preprocess_data.py  spike_trains.py
