[tool.poetry]
name = "n-gesture"
version = "0.1.0"
description = ""
authors = ["Moritz Eich <moritz.e50@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.3"
pytorch = "^1.0.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
black-nb = "^0.5.0"
jupyter = "^1.0.0"
tqdm = "^4.62.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
